--- a/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.css
+++ b/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.css
@@ -40,6 +40,10 @@ nav {
             }
             
         }
+
+        .navbar-session{
+            padding-inline: 1.5rem;
+        }
     }
 }
 
