edit cute ofertas

--- a/src/app/component/candidatura/candidatura.admin.plist.routed/candidatura.admin.plist.routed.component.html
+++ b/src/app/component/candidatura/candidatura.admin.plist.routed/candidatura.admin.plist.routed.component.html
@@ -123,7 +123,7 @@
               <td class="text-center">{{ candidatura.fecha }}</td>
               
               <td class="text-center">
-                <a href="admin/oferta/view/{{ candidatura.oferta.id }}">{{ candidatura.oferta.id }}</a>
+                <a href="admin/oferta/view/{{ candidatura.oferta.id }}"> {{candidatura.oferta.id}} {{ candidatura.oferta.titulo }}</a>
               </td>
 
               <td class="text-center">{{ candidatura.alumno.nombre + " " +candidatura.alumno.ape1 + " " +candidatura.alumno.ape2 }}</td>
